ProjetCompil/Verif/Test/fail/typeAsExp.cas
program
   i : integer;
begin
   i := real;
end.